js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype/message.js
assert
.
sameValue
(
TypeError
.
prototype
.
message
"
"
)
;
verifyNotEnumerable
(
TypeError
.
prototype
"
message
"
)
;
verifyWritable
(
TypeError
.
prototype
"
message
"
)
;
verifyConfigurable
(
TypeError
.
prototype
"
message
"
)
;
reportCompare
(
0
0
)
;
